# ArthaNethra

./: .dockerignore  .gitignore  BUILD_SUMMARY.md  GETTING_STARTED.md  GIT_COMMANDS.md  JUDGE_EVALUATION.md  LICENSE  LINTING_GUIDE.md  Makefile  README.md  SAMPLE_QUESTIONS.md  deterministic_schema.json  docker-compose.yml  env.example
backend/: .env  .ruff.toml  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  chat_session.py  citation.py  document.py  edge.py  entity.py  risk.py
backend/scripts/: check_graph_data.py
backend/services/: __init__.py  analytics.py  chatbot.py  contract_parser.py  document_type_detector.py  extraction.py  indexing.py  ingestion.py  invoice_parser.py  loan_parser.py  markdown_analyzer.py  markdown_parser.py  narrative_parser.py  normalization.py  persistence.py  relationship_detector.py  risk_detection.py  schemas.py
docs/: API.md  ARCHITECTURE.md  GETTING_STARTED.md  HACKATHON_CHECKLIST.md  PROJECT_OVERVIEW.md  PROJECT_STATUS.md  REMAINING_FEATURES.md  WORKFLOW.md
frontend/: .eslintrc.json  Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.html  main.ts  styles.scss
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/components/chat/: chat.component.ts
frontend/src/app/components/chat-unified/: chat-unified.component.css  chat-unified.component.html  chat-unified.component.ts
frontend/src/app/components/dashboard/: dashboard.component.ts
frontend/src/app/components/documents/: documents.component.ts
frontend/src/app/components/graph/: graph.component.ts
frontend/src/app/components/jobs/: jobs.component.ts
frontend/src/app/components/risks/: risks.component.ts
frontend/src/app/components/upload/: upload.component.ts
frontend/src/app/models/: document.model.ts  entity.model.ts  risk.model.ts
frontend/src/app/services/: api.service.ts
